--- a/2.Tourisum/Tour.css
+++ b/2.Tourisum/Tour.css
@@ -11,5 +11,5 @@ p{
     font-size:45px;
     text-align: center;
     color: rgb(250, 47, 152);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', serif;
 }
