--- a/7. Login Signup/Login.css
+++ b/7. Login Signup/Login.css
@@ -59,7 +59,7 @@ input {
 }
 
 .signup input[type="submit"] {
-    background-color: #0e78fa;
+    background-color: #147af8;
     width: 160px;
     height: 40px;
     border: none;
